--- a/styles/style.css
+++ b/styles/style.css
@@ -25,10 +25,17 @@ body {
 }
 
 .hero-content {
-  max-width: 600px;
-  text-align: left;
-  padding: 2rem;
+  max-width: 1440px;
+  width: 100%;
+  padding: 2rem 3rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
+
 
 .logo {
   width: 250px;
