--- a/styles/style.css
+++ b/styles/style.css
@@ -10,9 +10,9 @@ body {
   background-size: cover;
   height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
+  align-items: flex-start; /* <-- changed from center */
+  justify-content: flex-start;
+  padding-top: 100px; /* space from top */
 }
 
 .hero-overlay {
@@ -35,7 +35,6 @@ body {
   align-items: flex-start;
   justify-content: center;
 }
-
 
 .logo {
   width: 250px;
