--- a/styles/style.css
+++ b/styles/style.css
@@ -10,11 +10,10 @@ body {
   background-size: cover;
   height: 100vh;
   display: flex;
-  justify-content: flex-start;  /* align items to the left */
-  align-items: center;          /* vertically center */
-  padding-left: 5rem;           /* add space from the left */
-  padding-right: 2rem;
+  align-items: center;
+  justify-content: flex-start;
 }
+
 
 .hero-overlay {
   background: rgba(0, 0, 0, 0.6);
@@ -26,12 +25,14 @@ body {
 }
 
 .hero-content {
-  max-width: 600px;
   width: 100%;
+  max-width: 1440px;
+  padding: 0 5rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
+
 
 
 .logo {
