--- a/styles/style.css
+++ b/styles/style.css
@@ -76,10 +76,10 @@ body {
 
 .fox {
   position: absolute;
-  width: 150px;
-  height: 150px;
-  bottom: 2rem;
-  right: 8rem;
+  width: 250px;
+  height: auto;
+  bottom: 3rem;
+  right: 10rem;
   opacity: 0;
   transform: translateY(50px);
   animation: slideUp 1s ease-out 0.3s forwards;
