--- a/styles/style.css
+++ b/styles/style.css
@@ -93,3 +93,12 @@ body {
   }
 }
 
+.moon {
+  position: absolute;
+  width: 250px; /* adjust based on how big you want it */
+  top: 5rem;
+  right: 8rem;
+  z-index: 1;
+}
+
+
