--- a/styles/style.css
+++ b/styles/style.css
@@ -95,9 +95,10 @@ body {
 
 .moon {
   position: absolute;
-  width: 700px; /* adjust based on how big you want it */
-  top: 5rem;
-  right: 8rem;
+  width: 40vw; /* adjust based on how big you want it */
+  max-width: 700px;
+  top: 5%;
+  right: 8%;
   z-index: 1;
 }
 
@@ -261,5 +262,13 @@ body {
   font-size: 16px;
   color: #d2b67b;
   margin: 0.5rem 0 0;
+}
+
+@media (max-width: 768px) {
+  .moon {
+    width: 60vw;
+    top: 10%;
+    right: 10%;
+  }
 }
 
