--- a/styles/style.css
+++ b/styles/style.css
@@ -95,10 +95,9 @@ body {
 
 .moon {
   position: absolute;
-  width: 40vw; /* adjust based on how big you want it */
-  max-width: 700px;
-  top: 5%;
-  right: 8%;
+  width: 700px; /* adjust based on how big you want it */
+  top: 5rem;
+  right: 8rem;
   z-index: 1;
 }
 
