--- a/styles/style.css
+++ b/styles/style.css
@@ -101,6 +101,13 @@ body {
   z-index: 1;
 }
 
+.moon-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .about {
   background-color: #f4f4f5;
   color: #000000;
