--- a/styles/style.css
+++ b/styles/style.css
@@ -78,7 +78,7 @@ body {
   position: absolute;
   width: 600px;
   height: 600px;
-  bottom: 2rem;
+  bottom: 1rem;
   right: 4rem;
   opacity: 0;
   transform: translateY(50px);
@@ -94,7 +94,7 @@ body {
 }
 
 .moon {
-  position: absolute;
+  position: relative;
   width: 700px; /* adjust based on how big you want it */
   top: 5rem;
   right: 8rem;
