--- a/styles/style.css
+++ b/styles/style.css
@@ -94,7 +94,7 @@ body {
 }
 
 .moon {
-  position: relative;
+  position: absolute;
   width: 700px; /* adjust based on how big you want it */
   top: 5rem;
   right: 8rem;
