--- a/styles/style.css
+++ b/styles/style.css
@@ -94,12 +94,11 @@ body {
 }
 
 .moon {
-  position: absolute;
+  position: relative;
   width: 700px; /* adjust based on how big you want it */
   top: 5rem;
   right: 8rem;
   z-index: 1;
-  transform: translateY(50px);
 }
 
 .about {
