--- a/styles/style.css
+++ b/styles/style.css
@@ -96,7 +96,7 @@ body {
 .moon {
   position: absolute;
   width: 700px; /* adjust based on how big you want it */
-  top: 5rem;
+  bottom: 3rem;
   right: 8rem;
   z-index: 1;
 }
