--- a/styles/style.css
+++ b/styles/style.css
@@ -265,7 +265,7 @@ body {
 }
 
 .navbar {
-  background-color: #000;
+  background-color: transparent;
   padding: 1.5rem 3rem;
   position: absolute;
   top: 0;
@@ -277,7 +277,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1440px;
+  max-width: 1400px;
   margin: 0 auto;
 }
 
