--- a/styles/style.css
+++ b/styles/style.css
@@ -278,7 +278,7 @@ body {
   justify-content: space-between;
   align-items: center;
   max-width: 1300px;
-  margin: 0 auto;
+  margin: 0;
   padding: 0 2rem; /* Add horizontal padding */
 }
 
