--- a/styles/style.css
+++ b/styles/style.css
@@ -269,8 +269,10 @@ body {
   padding: 1.5rem 3rem;
   position: absolute;
   top: 0;
+  left: 0;
+  right: 0;
   width: 100%;
-  z-index: 20;
+  z-index: 10;
 }
 
 .navbar-container {
@@ -278,8 +280,9 @@ body {
   justify-content: space-between;
   align-items: center;
   max-width: 1300px;
-  margin: 0 0;
-  padding: 0 2rem; /* Add horizontal padding */
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar-logo .logo-img {
