--- a/styles/style.css
+++ b/styles/style.css
@@ -271,7 +271,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  width: 100%;
+  width: 1440px;
   z-index: 10;
   box-sizing: border-box; /* Important to prevent padding from causing overflow */
 }
