--- a/styles/style.css
+++ b/styles/style.css
@@ -272,7 +272,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  width: 1440px;
+  width: 100%;
   z-index: 10;
   box-sizing: border-box; /* Important to prevent padding from causing overflow */
 }
