--- a/styles/style.css
+++ b/styles/style.css
@@ -296,10 +296,11 @@ body {
     gap: 1rem;
   }
 
-  .navbar-links {
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    gap: 2rem;
+.navbar-links {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 2rem;
   }
 }
 
