--- a/styles/style.css
+++ b/styles/style.css
@@ -268,7 +268,7 @@ body {
 .navbar {
   background-color: transparent;
   padding: 1.5rem 3rem;
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
