--- a/styles/style.css
+++ b/styles/style.css
@@ -275,6 +275,7 @@ body {
   width: 100%;
   z-index: 10;
   box-sizing: border-box; /* Important to prevent padding from causing overflow */
+  top: 10rem:
 }
 
 .navbar-container {
