--- a/styles/style.css
+++ b/styles/style.css
@@ -8,8 +8,11 @@ body {
 .hero {
   background: url('/uolkvlu/assets/hero-bg.png') no-repeat center center;
   background-size: cover;
+  width: 100%;
   height: 100vh;
   position: relative;
+  overflow: hidden;
+  flex-direction: column; 
 }
 
 .hero-overlay {
@@ -273,7 +276,7 @@ body {
   left: 0;
   right: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 20;
   bottom: 3rem;
   box-sizing: border-box; /* Important to prevent padding from causing overflow */
 }
