--- a/styles/style.css
+++ b/styles/style.css
@@ -108,7 +108,7 @@ body {
 .about {
   background-color: #f4f4f5;
   color: #000000;
-  padding: 6rem 2rem;
+  padding: 6rem 2rem 2rem 2rem; /* top right bottom left */
   z-index: 10;
 }
 
