--- a/styles/style.css
+++ b/styles/style.css
@@ -340,21 +340,24 @@ body {
     width: 90vw;
     max-width: 320px;
     position: absolute;
-    top: 8rem; /* <--- changed from bottom to top */
-    right: 2rem;
+    top: 6rem;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 1;
   }
-
+  
   .fox {
     width: 70vw;
     max-width: 280px;
     height: auto;
     position: absolute;
-    top: 12rem; /* <--- adjusted to float over moon */
-    right: 1rem;
+    top: 10rem;
+    left: 50%;
+    transform: translateX(-50%);
     animation: slideUp 1s ease-out 0.3s forwards;
     z-index: 5;
   }
+
 
   .hero-text {
     position: absolute;
