--- a/styles/style.css
+++ b/styles/style.css
@@ -342,7 +342,7 @@ body {
     position: absolute;
     top: 6rem;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateY(-50%);
     z-index: 1;
   }
   
