--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ body {
   background: url('/uolkvlu/assets/hero-bg.png') no-repeat center center;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   position: relative;
   overflow: hidden;
   flex-direction: column; 
