--- a/styles/style.css
+++ b/styles/style.css
@@ -334,6 +334,7 @@ body {
     height: 100vh;
     position: relative;
     padding: 0;
+    height: calc(100vh - 80px); /* subtract navbar height */
   }
 
   .moon {
