--- a/styles/style.css
+++ b/styles/style.css
@@ -386,7 +386,7 @@ body {
  .navbar {
   background-color: transparent;
   padding: 1.5rem 3rem;
-  position: fixed; /* <- change from absolute to fixed */
+  position: relative; /* <- change from absolute to fixed */
   top: 0;
   left: 0;
   right: 0;
